# outConsumer

./: CMakeLists.txt  Config.cmake.in
include/: outconsumer.hpp
src/: outconsumer.cpp
